Fix gap in projects section

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,8 @@
 }
 
 .fullWidth {
+  margin-top: -4px;
+  margin-bottom: -6px;
   width: 100%;
 }
 
